--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="android.html" class="a-principal">Home</a>
             <a href="noticias.html" class="a-principal">Notícias</a>
             <a href="curiosidades.html" class="a-principal">Curiosidades</a>
-            <a href="faleconosco.html" class="a-principal">Fale Conosco</a>
+            <a href="faleconosco.html" class="a-principal">Contato</a>
         </nav>
     </header>
     <main>
