--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>CURIOSIDADES DE TECNOLOGIA</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</p>
         <nav>
-            <a href="android.html" class="a-principal">Home</a>
-            <a href="noticias.html" class="a-principal">Notícias</a>
-            <a href="curiosidades.html" class="a-principal">Curiosidades</a>
-            <a href="faleconosco.html" class="a-principal">Contato</a>
+            <a href="#" class="a-principal">Home</a>
+            <a href="#" class="a-principal">Notícias</a>
+            <a href="#" class="a-principal">Curiosidades</a>
+            <a href="#" class="a-principal">Contato</a>
         </nav>
     </header>
     <main>
